--- a/themes/default/address_list.html
+++ b/themes/default/address_list.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/images/favicon.ico"/>
     <meta content="yes" name="apple-mobile-web-app-capable"/>
     <meta content="yes" name="apple-touch-fullscreen"/>
     <meta content="telephone=no" name="format-detection"/>
@@ -10,11 +9,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>收货地址</title>
-    <link rel="stylesheet" href="css/public.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="lib/weui.min0803.css">
-    <link rel="stylesheet" href="lib/jquery-weui.min0803.css">
-    <script src="js/zepto.min.js"></script>
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/css/public.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/weui.min0803.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/jquery-weui.min0803.css');?>">
+    <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
     <script>
         (function(){
             function change(){
@@ -32,22 +31,28 @@
         <a></a>
     </div>
     <div class="weui_tab_bd" style="padding-bottom: 100px;">
+        <?php foreach($address as $addr) :?>
         <div class="weui_panel weui_panel_access address" addressid="{$item->id}" style="margin-top: 10px;">
             <div class="weui_panel_bd">
                 <div class="weui_media_box weui_media_text">
-                    <h4 class="weui_media_title" style="font-size:16px;color: #666;line-height: 30px;">qq<span class="fr">1366666666</span></h4>
-                    <p class="weui_media_desc" style="font-size: 16px;color: #666;line-height: 30px;">家居安静安静安静安静<span style="color: #e70012;">【默认地址】</span></p>
+                    <h4 class="weui_media_title" style="font-size:16px;color: #666;line-height: 30px;">
+                        <?php echo $addr['consignee'];?>
+                        <span class="fr"><?php echo $addr['mobile'];?></span>
+                    </h4>
+                    <p class="weui_media_desc" style="font-size: 16px;color: #666;line-height: 30px;"><?php echo $addr['province'].$addr['city'].$addr['district'].$addr['street'];?>
+                        <?php if ($addr['default']=='1') :?><span style="color: #e70012;">【默认地址】</span><?php endif;?>
+                    </p>
                 </div>
             </div>
             <div class="weui_cell_ft" style="margin-left:15px;padding-right: 15px;padding-bottom:10px;border-top: #e5e5e5 solid 1px;">
-                <a href="javascript:;" class="weui_btn weui_btn_mini weui_btn_default del"  addressid="{$item->id}" style="background-color:#fff;border: #a1a1a1 solid 1px;color: #a1a1a1;">删除</a>
-                <a href="/profile/edit_address/{$item->id}" class="weui_btn weui_btn_mini weui_btn_primary" style="background-color:#fff;border: #e60111 solid 1px;color: #e60111;">编辑</a>
+                <a href="<?php echo site_url('address/delete_address').'/'.$addr['address_id'];?>" class="weui_btn weui_btn_mini weui_btn_default del"   style="background-color:#fff;border: #a1a1a1 solid 1px;color: #a1a1a1;">删除</a>
             </div>
+            <?php endforeach;?>
         </div>
     </div>
 
     <div class="weui_tabbar" style="background-color:#fff;">
-        <a href="/profile/edit_address/0" class="weui_btn weui_btn_primary" style="background-color: #e60012;width: 100%;margin: 8px 20px;">添加收货地址</a>
+        <a href="<?php echo site_url('address/add_address');?>" class="weui_btn weui_btn_primary" style="background-color: #e60012;width: 100%;margin: 8px 20px;">添加收货地址</a>
     </div>
     <script>
         $('.del').on('click', function(){
@@ -55,7 +60,6 @@
             var parentobj = $(this).closest('.address');
             $.confirm("您确定要删除该地址吗?", "确认删除?", function() {
                 $.post("/profile/del_address",{ addressid:addressid},function(jd){
-                    {redirecturl url='home/signin'}
                     if (jd.success) {
                         parentobj.hide('normal', function() {
                             parentobj.remove();
