--- a/themes/default/online_charge.html
+++ b/themes/default/online_charge.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/images/favicon.ico"/>
     <meta content="yes" name="apple-mobile-web-app-capable"/>
     <meta content="yes" name="apple-touch-fullscreen"/>
     <meta content="telephone=no" name="format-detection"/>
@@ -10,11 +9,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>在线支付</title>
-    <link rel="stylesheet" href="css/public.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="lib/weui.css">
-    <link rel="stylesheet" href="lib/jquery-weui.min.css">
-    <script src="js/zepto.min.js"></script>
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/css/public.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/weui.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/jquery-weui.min.css');?>">
+    <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script>
         (function(){
             function change(){
@@ -35,12 +35,12 @@
         <div class="weui-icon-area" style="margin-bottom: 20px;"><i class="weui-icon-success weui-icon_msg" style="color: #e60012;"></i></div>
         <div class="weui-text-area">
             <h2 class="weui-msg-title">订单提交成功,请尽快支付！</h2>
-            <p class="weui-msg-desc">订单编号：</p>
-            <p class="weui-msg-desc">支付金额：<span style="color: #e60012;font-weight: bold;">6666</span></p>
+            <p class="weui-msg-desc">订单编号：<span style="color: #e60012;font-weight: bold;"><?php echo $order['order_sn'] ;?></span></p>
+            <p class="weui-msg-desc">支付金额：<span style="color: #e60012;font-weight: bold;"><?php echo $order['order_amount'] ;?></span></p>
         </div>
         <div class="weui-opr-area">
             <p class="weui-btn-area">
-                <a href="javascript:;" class="weui-btn weui-btn-primary topay" orderid="{$order->id}" orderno="{$order->orderno}" amount="{$order->realamount}" style="background-color: #e60012;">微信安全支付</a>
+                <a href="javascript:;" class="weui-btn weui-btn-primary topay" orderid="<?php echo $order['order_id'] ;?>" orderno="<?php echo $order['order_sn'] ;?>" amount="<?php echo $order['order_amount'] ;?>" style="background-color: #e60012;">微信安全支付</a>
             </p>
         </div>
     </div>
@@ -49,7 +49,7 @@
             var orderid = $(this).attr('orderid');
             var orderno = $(this).attr('orderno');
             var amount = $(this).attr('amount');
-            $.post('/order/to_pay', { orderid:orderid,orderno:orderno,amount:amount }, function(jd){
+            $.post("<?php echo site_url('order/to_pay');?>", { orderid:orderid,orderno:orderno,amount:amount }, function(jd){
                 if(jd.success){
                     wx.chooseWXPay({
                         appId: jd.data.appId,
@@ -62,10 +62,10 @@
                             location.href="/order/" + jd.data.orderid;
                         },
                         fail: function (res) {
-                            alert('支付失败，请重试！');
+                            $.toast('支付失败，请重试！');
                         },
                         cancel: function(){
-                            alert('微信支付已取消！');
+                            $.toast('微信支付已取消！');
                         }
                     });
                 }else{
