--- a/themes/default/goods.html
+++ b/themes/default/goods.html
@@ -40,6 +40,9 @@
     <title><?php echo $goods['goods_name'];?></title>
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/public.css');?>">
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/weui.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/jquery-weui.min.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/jquery-weui.min0803.js');?>">
     <script>
         (function(){
             function change(){
@@ -112,7 +115,7 @@
                 if(jd.success==1){
                     location.href=jd.msg;
                 }else{
-                    $.alert(jd.msg, "提醒");
+                    alert(jd.msg, "提醒");
                     location.href=jd.url;
                 }
             }, 'json');
