--- a/themes/default/order_confirm.html
+++ b/themes/default/order_confirm.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="/images/favicon.ico"/>
     <meta content="yes" name="apple-mobile-web-app-capable"/>
     <meta content="yes" name="apple-touch-fullscreen"/>
     <meta content="telephone=no" name="format-detection"/>
@@ -33,7 +32,20 @@
     </form>
 
     <div class="address">
-        <input type="text" id="addressid" placeholder="请输入收货地址。。">
+        <a href="<?php if (empty($address)) :?>/profile/edit_address/0?from=confirm<?php endif;?>" class="weui_media_box weui_media_appmsg weui_cell " data-target="#address_popup">
+            <div class="weui_media_hd" style="width: 20px;">
+                <img class="weui_media_appmsg_thumb" src="<?php echo base_url('themes/default/img/location.jpg');?>" alt="">
+            </div>
+            <div class="weui_media_bd selected_address">
+                <?php if (empty($address)) :?>
+                <h4 style="color: #999;">点击添加新地址</h4>
+                <?php else :?>
+                <h4 class="weui_media_title">收货人：<?php echo $address['consignee'];?></h4>
+                <p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">联系电话：<?php echo $address['mobile'];?></p>
+                <p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">收货地址：<?php echo $address['province'].$address['city'].$address['district'].$address['street'];?></p>
+                <?php endif;?>
+            </div>
+        </a>
     </div>
     <div class="listCont">
         <ul>
@@ -67,6 +79,20 @@
     <div>
         <button class="confirmBtn " id="submit_order">提交订单</button>
     </div>
+    <div id="address_popup" class='weui-popup-container'>
+        <div class="weui-popup-modal addresslist" style="background-color: #FFF;">
+            <div class="weui_cells_title">请选择送货地址 <a class="fr  close-popup" href="/profile/address" style="color: #e70012;">管理</a> </div>
+            <div class="weui_panel weui_panel_access address" addressid="" style="cursor: pointer;">
+                <div class="weui_panel_bd">
+                    <div class="weui_media_box weui_media_text">
+                        <h4 class="weui_media_title" style="font-size:16px;color: #666;line-height: 30px;"><span class="acceptname"></span><span class="fr mobile">4324234</span></h4>
+                        <p class="weui_media_desc fuladdr" style="font-size: 16px;color: #666;line-height: 30px;"><span style="color: #e70012;font-size: 14px;">[默认地址]</span></p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
     <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
     <script>
         // 提交订单并微信支付
@@ -95,6 +121,20 @@
                     submitflag = false;
                 }
             }, 'json');
+        });
+        // 选择其他地址
+        $('.address').on('click', function(){
+            var addressid = $(this).attr('addressid');
+            var acceptname = $(this).find('.acceptname').html();
+            var mobile = $(this).find('.mobile').html();
+            var fuladdr = $(this).find('.fuladdr').html();
+
+            var strHtml = '';
+            strHtml += '<h4 class="weui_media_title">收货人：'+acceptname+'</h4><p class="weui_media_desc"style="font-size: 14px;line-height: 20px;">联系电话：'+mobile+'</p><p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">收货地址：'+fuladdr+'</p>';
+            $('.selected_address').html(strHtml);
+            $('input[name=addressid]').val(addressid);
+
+            $('#address_popup .close-popup').trigger('click');
         });
     </script>
 </body>
