--- a/themes/default/order_confirm.html
+++ b/themes/default/order_confirm.html
@@ -32,9 +32,9 @@
     </form>
 
     <div class="address">
-        <a href="<?php if (empty($address)) :?>/profile/edit_address/0?from=confirm<?php endif;?>" class="weui_media_box weui_media_appmsg weui_cell " data-target="#address_popup">
+        <a href="<?php if (empty($address))  echo site_url('address/add_address'); endif;?>" class="weui_media_box weui_media_appmsg weui_cell " data-target="#address_popup">
             <div class="weui_media_hd" style="width: 20px;">
-                <img class="weui_media_appmsg_thumb" src="<?php echo base_url('themes/default/img/location.jpg');?>" alt="">
+                <img class="weui_media_appmsg_thumb" src="<?php echo base_url('themes/default/img/location.jpg');?>"  height="20px" width="20px" alt="">
             </div>
             <div class="weui_media_bd selected_address">
                 <?php if (empty($address)) :?>
