--- a/themes/default/gouwuche.html
+++ b/themes/default/gouwuche.html
@@ -59,7 +59,7 @@
         <div class="centerbox" id="boxList">
             <img src="<?php echo base_url('themes/default/icon/car.png');?>" alt="">
             <p>亲，您的购物车是空的，赶紧购买吧！</p>
-            <button onclick="window.href='<?php echo site_url('/');?>'">去逛逛</button>
+            <button onclick="location.href='<?php echo site_url('/');?>'">去逛逛</button>
         </div>
     <?php else :?>
 
