--- a/themes/default/address.html
+++ b/themes/default/address.html
@@ -12,7 +12,7 @@
     <title>新增地址</title>
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/public.css');?>">
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">
-    <script src="js/zepto.min.js"></script>
+    <script src="<?php echo base_url('themes/default/lib/jquery-2.1.4.js');?>"></script>
     <script>
         (function(){
             function change(){
@@ -42,22 +42,22 @@
                 </li>
                 <li>
                     <span>省/直辖市</span>
-                    <select class="weui_select" name="province">
+                    <select class="weui_select" name="province" id="province">
                         <option selected="" value="">省/直辖市</option>
                         <?php foreach($province as $v) :?>
-                        <option value="<?php echo $v['region_id'];?>"><?php echo $v['region_name'];?></option>
+                        <option value="<?php echo $v['region_id'];?>" data-name="<?php echo $v['region_name'];?>"><?php echo $v['region_name'];?></option>
                         <?php endforeach;?>
                     </select>
                 </li>
                 <li>
                     <span>市</span>
-                    <select class="weui_select" name="city">
+                    <select class="weui_select" name="city" id="city">
                         <option selected="" value="">市</option>
                     </select>
                 </li>
                 <li>
                     <span>区县</span>
-                    <select class="weui_select" name="region">
+                    <select class="weui_select" name="region" id="region">
                         <option selected="" value="">区县</option>
                     </select>
                 </li>
@@ -103,7 +103,15 @@
 //                    return;
 //                }
                 saveflag = true;
-                $.post("<?php echo site_url('/address/create_address');?>", $('#mainForm').serialize(), function(jd){
+                $.post("<?php echo site_url('/address/create_address');?>", {
+                    acceptname:$('input[name="acceptname"]').val(),
+                    province:province,
+                    city:city,
+                    region:region,
+                    mobile:$('input[name="mobile"]').val(),
+                    addr:$('input[name="addr"]').val()
+
+                }, function(jd){
                     if(jd.success){
                         alert('保存成功');
                         location.href = jd.msg;
@@ -113,11 +121,15 @@
                     }
                 }, 'json');
             });
-
+            var province = '';
+            var city = '';
+            var region = '';
             // 省份变化 加载市
             $('select[name="province"]').on('change', function(){
                         var provinceid = $(this).val();
-                        if(provinceid == ''){
+                            province = $("#province").find("option:selected").text();
+
+                if(provinceid == ''){
                             $('select[name="city"]').html('<option value="" selected>市</option>');
                             $('select[name="city"]').trigger('change');
                             return;
@@ -141,6 +153,7 @@
             // 城市变化 加载区县
             $('select[name="city"]').on('change', function(){
                 var provinceid = $(this).val();
+                    city = $("#city").find("option:selected").text();
                 if(provinceid == ''){
                     $('select[name="region"]').html('<option value="" selected>区/县</option>');
                     $('select[name="region"]').trigger('change');
@@ -161,6 +174,9 @@
                         $('select[name="region"]').trigger('change');
                     }
                 }, 'json');
+            });
+            $('select[name="region"]').on('change', function(){
+                region = $("#region").find("option:selected").text();
             });
         });
     </script>
