--- a/themes/default/goods.html
+++ b/themes/default/goods.html
@@ -58,7 +58,7 @@
     <div class="conBox">
         <div class="header">
             <span>商品详情</span>
-            <a></a>
+            <a href="javascript :;" onClick="javascript :history.back(-1);"></a>
         </div>
         <div class="banner">
             <img src="<?php echo base_url('public/uploads/').'/'.$goods['goods_thumb'];?>" alt="">
