--- a/themes/default/gouwuche.html
+++ b/themes/default/gouwuche.html
@@ -53,7 +53,7 @@
 <body>
     <div class="header">
         <span>购物车</span>
-        <a></a>
+        <a href="javascript :;" onClick="javascript :history.back(-1);"></a>
     </div>
     <?php if (empty($carts)) :?>
         <div class="centerbox" id="boxList">
