--- a/themes/default/address_list.html
+++ b/themes/default/address_list.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/public.css');?>">
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">
     <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/weui.min0803.css');?>">
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/jquery-weui.min0803.css');?>">
     <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
     <script>
         (function(){
@@ -27,7 +28,7 @@
 <body>
     <div class="header">
         <span>收货地址</span>
-        <a></a>
+        <a href="javascript :;" onClick="javascript :history.back(-1);"></a>
     </div>
     <div class="weui_tab_bd" style="padding-bottom: 100px;">
         <?php foreach($address as $addr) :?>
