--- a/themes/default/login.html
+++ b/themes/default/login.html
@@ -113,7 +113,7 @@
     <div class="conBox">
         <div class="header">
             <span>登录</span>
-
+            <a href="javascript :;" onClick="javascript :history.back(-1);"></a>
         </div>
         <div class="contain">
             <img src="<?php echo base_url('themes/default/img/timg.jpg');?>" alt="">
