--- a/themes/default/order_confirm.html
+++ b/themes/default/order_confirm.html
@@ -29,14 +29,14 @@
 <body>
     <div class="header">
         <span>订单确认</span>
-        <a></a>
+        <a href="javascript :;" onClick="javascript :history.back(-1);"></a>
     </div>
     <form id="confirm_form">
         <input type="hidden" name="addressid" value="0">
     </form>
 
     <div class="address">
-        <!--<a href="<?php if (empty($address)):?><?php echo site_url('address/add_address');?><?php else :?>javascript:;<?php endif;?>" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">-->
+        <a href="<?php if (empty($address)):?><?php echo site_url('address/add_address');?><?php else :?>javascript:;<?php endif;?>" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">
         <a href="javascript:;" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">
             <div class="weui_media_hd" style="width: 20px;">
                 <img class="weui_media_appmsg_thumb" src="<?php echo base_url('themes/default/img/location.jpg');?>"  height="20px" width="20px" alt="">
@@ -87,15 +87,19 @@
     <div id="address_popup" class='weui-popup__container'>
         <div class="weui-popup__overlay"></div>
         <div class="weui-popup__modal addresslist" style="background-color: #FFF;">
-            <div class="weui_cells_title">请选择送货地址 <a class="fr  close-popup" href="/profile/address" style="color: #e70012;">管理</a> </div>
-            <div class="weui_panel weui_panel_access address" addressid="" style="cursor: pointer;">
+            <div class="weui_cells_title">请选择送货地址 <a class="fr  close-popup" href="<?php echo site_url('address/show_address');?>" style="color: #e70012;">管理</a> </div>
+            <?php foreach($addresslist as $addr) :?>
+            <div class="weui_panel weui_panel_access address" addressid="<?php echo $addr['address_id'];?>" style="cursor: pointer;">
                 <div class="weui_panel_bd">
                     <div class="weui_media_box weui_media_text">
-                        <h4 class="weui_media_title" style="font-size:16px;color: #666;line-height: 30px;"><span class="acceptname"></span><span class="fr mobile">4324234</span></h4>
-                        <p class="weui_media_desc fuladdr" style="font-size: 16px;color: #666;line-height: 30px;"><span style="color: #e70012;font-size: 14px;">[默认地址]</span></p>
+                        <h4 class="weui_media_title" style="font-size:16px;color: #666;line-height: 30px;"><span class="acceptname"><?php echo $addr['consignee'];?></span><span class="fr mobile"><?php echo $addr['mobile'];?></span></h4>
+                        <p class="weui_media_desc fuladdr" style="font-size: 16px;color: #666;line-height: 30px;">
+                            <?php echo $addr['province'].$addr['city'].$addr['district'].$addr['street'];?>
+                            <?php if ($addr['default']=='1') :?> <span style="color: #e70012;font-size: 14px;">[默认地址]</span><?php endif;?>
                     </div>
                 </div>
             </div>
+            <?php endforeach;?>
         </div>
     </div>
     <script>
