--- a/themes/default/register.html
+++ b/themes/default/register.html
@@ -105,6 +105,7 @@
     <div class="conBox">
         <div class="header">
             <span>注册</span>
+            <a href="javascript :;" onClick="javascript :history.back(-1);"></a>
         </div>
         <div class="contain">
             <img src="<?php echo base_url('themes/default/img/timg.jpg');?>" alt="">
