--- a/themes/default/order_confirm.html
+++ b/themes/default/order_confirm.html
@@ -36,7 +36,7 @@
     </form>
 
     <div class="address">
-        <!--<a href="<?php if (empty($address)):?><?php echo site_url('address/add_address');?><?php else :?>javascript:;<?php endif;?>" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">-->
+        <a href="<?php if (empty($address)):?><?php echo site_url('address/add_address');?><?php else :?>javascript:;<?php endif;?>" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">
         <a href="javascript:;" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">
             <div class="weui_media_hd" style="width: 20px;">
                 <img class="weui_media_appmsg_thumb" src="<?php echo base_url('themes/default/img/location.jpg');?>"  height="20px" width="20px" alt="">
