--- a/themes/default/myorder.html
+++ b/themes/default/myorder.html
@@ -108,9 +108,9 @@
                 </div>
             </div>
             <div class="weui_cell">
-                <div class="weui_cell_ft operatediv" orderid="{$item->id}">
+                <div class="weui_cell_ft operatediv" orderid="<?php echo $order['order_sn'];?>">
                     <a href="javascript:;" class="weui_btn weui_btn_mini weui_btn_default cancel_order" orderid="{$item->id}" style="line-height: 2;background-color:#fff;border: #a1a1a1 solid 1px;color: #a1a1a1;border-radius: 10px;">取消订单</a>
-                    <a href="/order/online_charge/{$item->id}" class="weui_btn weui_btn_mini weui_btn_primary" style="line-height: 2;background-color:#fff;border: #e60111 solid 1px;color: #e60111;border-radius: 10px;">立即支付</a>
+                    <a href="<?php echo  site_url('order/online_charge/').$order['order_sn'];?>" class="weui_btn weui_btn_mini weui_btn_primary" style="line-height: 2;background-color:#fff;border: #e60111 solid 1px;color: #e60111;border-radius: 10px;">立即支付</a>
                     <a href="javascript:;" class="weui_btn weui_btn_mini weui_btn_default cancel_order" orderid="{$item->id}" style="line-height: 2;background-color:#fff;border: #a1a1a1 solid 1px;color: #a1a1a1;border-radius: 10px;">取消订单</a>
                     <a href="/order/comment_list/{$item->id}" class="weui_btn weui_btn_mini weui_btn_primary" style="line-height: 2;background-color:#fff;border: #e60111 solid 1px;color: #e60111;border-radius: 10px;">去评价</a>
                 </div>
@@ -122,9 +122,9 @@
     <div class="footnav">
         <ul>
            <li><a href="javascript:;"><img src="<?php echo base_url('themes/default/icon/11ac.png');?>" alt=""><p>首页</p></a></li>
-            <li><a href="<?php echo site_url('order/get_orders/ALL')?>"><img src="<?php echo base_url('themes/default/icon/22.png');?>" alt=""><p>订单</p></a></li>
+            <li><a href="<?php echo site_url('order/get_orders/ALL')?>"><img src="<?php echo base_url('themes/default/icon/22ac.png');?>" alt=""><p>订单</p></a></li>
             <li><a href="<?php echo site_url('cart/show');?>"><img src="<?php echo base_url('themes/default/icon/33.png');?>" alt=""><p>购物车</p></a></li>
-            <li><a href="javascript:;"><img src="<?php echo base_url('themes/default/icon/44.png');?>" alt=""><p>会员中心</p></a></li>
+            <li><a href="<?php echo site_url('user/profile')?>"><img src="<?php echo base_url('themes/default/icon/44.png');?>" alt=""><p>会员中心</p></a></li>
         </ul>
     </div>
     <script src="js/zepto.min.js" type="text/javascript" charset="utf-8"></script>
