--- a/themes/default/gouwuche.html
+++ b/themes/default/gouwuche.html
@@ -95,8 +95,8 @@
         <ul>
             <li><a href="<?php echo site_url('/');?>"><img src="<?php echo base_url('themes/default/icon/11.png');?>" alt=""><p>首页</p></a></li>
             <li><a href="<?php echo site_url('order/get_orders/ALL')?>"><img src="<?php echo base_url('themes/default/icon/22.png');?>" alt=""><p>订单</p></a></li>
-            <li><a href="<?php echo site_url('cart/show');?>"><img src="<?php echo base_url('themes/default/icon/33.png');?>" alt=""><p>购物车</p></a></li>
-            <li><a href="javascript:;"><img src="<?php echo base_url('themes/default/icon/44.png');?>" alt=""><p>会员中心</p></a></li>
+            <li><a href="<?php echo site_url('cart/show');?>"><img src="<?php echo base_url('themes/default/icon/33ac.png');?>" alt=""><p>购物车</p></a></li>
+            <li><a href="<?php echo site_url('user/profile')?>"><img src="<?php echo base_url('themes/default/icon/44.png');?>" alt=""><p>会员中心</p></a></li>
         </ul>
     </div>
     <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
