--- a/themes/default/list.html
+++ b/themes/default/list.html
@@ -83,7 +83,7 @@
             <li><a href="javascript:;"><img src="<?php echo base_url('themes/default/icon/11ac.png');?>" alt=""><p>首页</p></a></li>
             <li><a href="<?php echo site_url('order/get_orders/ALL')?>"><img src="<?php echo base_url('themes/default/icon/22.png');?>" alt=""><p>订单</p></a></li>
             <li><a href="<?php echo site_url('cart/show');?>"><img src="<?php echo base_url('themes/default/icon/33.png');?>" alt=""><p>购物车</p></a></li>
-            <li><a href="javascript:;"><img src="<?php echo base_url('themes/default/icon/44.png');?>" alt=""><p>会员中心</p></a></li>
+            <li><a href="<?php echo site_url('user/profile')?>"><img src="<?php echo base_url('themes/default/icon/44.png');?>" alt=""><p>会员中心</p></a></li>
 
         </ul>
     </div>
