--- a/themes/default/online_charge.html
+++ b/themes/default/online_charge.html
@@ -27,7 +27,7 @@
     </script>
     <script>
         wx.config({
-            debug: true,
+            debug: false,
             appId: '<?php echo $signPackage["appId"];?>',//jd.data.appId,
             timestamp: '<?php echo $signPackage["timestamp"];?>',
             nonceStr: '<?php echo $signPackage["nonceStr"];?>',
