--- a/themes/default/order_confirm.html
+++ b/themes/default/order_confirm.html
@@ -82,14 +82,14 @@
         </ul>
     </div>
     <div>
-        <button class="confirmBtn weui_btn" id="submit_order">提交订单</button>
+        <button class="confirmBtn " id="submit_order">提交订单</button>
     </div>
     <div id="address_popup" class='weui-popup__container'>
         <div class="weui-popup__overlay"></div>
         <div class="weui-popup__modal addresslist" style="background-color: #FFF;">
             <div class="weui_cells_title">请选择送货地址 <a class="fr  close-popup" href="<?php echo site_url('address/show_address');?>" style="color: #e70012;">管理</a> </div>
             <?php foreach($addresslist as $addr) :?>
-            <div class="weui_panel weui_panel_access address close-popup" addressid="<?php echo $addr['address_id'];?>" style="cursor: pointer;">
+            <div class="weui_panel weui_panel_access address" addressid="<?php echo $addr['address_id'];?>" style="cursor: pointer;">
                 <div class="weui_panel_bd">
                     <div class="weui_media_box weui_media_text">
                         <h4 class="weui_media_title" style="font-size:16px;color: #666;line-height: 30px;"><span class="acceptname"><?php echo $addr['consignee'];?></span><span class="fr mobile"><?php echo $addr['mobile'];?></span></h4>
@@ -131,7 +131,7 @@
             }, 'json');
         });
         // 选择其他地址
-        $('.address').on('click', function(){
+        $('.baddress').on('click', function(){
             var addressid = $(this).attr('addressid');
             var acceptname = $(this).find('.acceptname').html();
             var mobile = $(this).find('.mobile').html();
@@ -141,6 +141,7 @@
             strHtml += '<h4 class="weui_media_title">收货人：'+acceptname+'</h4><p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">联系电话：'+mobile+'</p><p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">收货地址：'+fuladdr+'</p>';
             $('.selected_address').html(strHtml);
             $('input[name=addressid]').val(addressid);
+
 //            $('#address_popup .close-popup').trigger('click');
         });
     </script>
