--- a/themes/default/order_confirm.html
+++ b/themes/default/order_confirm.html
@@ -37,19 +37,20 @@
 
     <div class="address">
         <a href="<?php if (empty($address)):?><?php echo site_url('address/add_address');?><?php else :?>javascript:;<?php endif;?>" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">
-        <a href="javascript:;" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">
-            <div class="weui_media_hd" style="width: 20px;">
-                <img class="weui_media_appmsg_thumb" src="<?php echo base_url('themes/default/img/adress.png');?>"  height="20px" width="20px" alt="">
-            </div>
-            <div class="weui_media_bd selected_address">
-                <?php if (empty($address)) :?>
-                <h4 style="color: #999;">点击添加新地址</h4>
-                <?php else :?>
-                <h4 class="weui_media_title">收货人：<?php echo $address['consignee'];?></h4>
-                <p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">联系电话：<?php echo $address['mobile'];?></p>
-                <p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">收货地址：<?php echo $address['province'].$address['city'].$address['district'].$address['street'];?></p>
-                <?php endif;?>
-            </div>
+            <!--<a href="javascript:;" class="weui_media_box weui_media_appmsg weui_cell open-popup" data-target="#address_popup">-->
+                <div class="weui_media_hd" style="width: 20px;">
+                    <img class="weui_media_appmsg_thumb" src="<?php echo base_url('themes/default/img/adress.png');?>"  height="20px" width="20px" alt="">
+                </div>
+                <div class="weui_media_bd selected_address">
+                    <?php if (empty($address)) :?>
+                    <h4 style="color: #999;">点击添加新地址</h4>
+                    <?php else :?>
+                    <h4 class="weui_media_title">收货人：<?php echo $address['consignee'];?></h4>
+                    <p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">联系电话：<?php echo $address['mobile'];?></p>
+                    <p class="weui_media_desc" style="font-size: 14px;line-height: 20px;">收货地址：<?php echo $address['province'].$address['city'].$address['district'].$address['street'];?></p>
+                    <?php endif;?>
+                </div>
+            <!--</a>-->
         </a>
     </div>
     <div class="listCont">
@@ -82,10 +83,11 @@
         </ul>
     </div>
     <div>
-        <button class="confirmBtn weui_btn" id="submit_order">提交订单</button>
+        <!--<button class="confirmBtn weui_btn" id="submit_order">提交订单</button>-->
+        <a href="javascript:void(0);" id="submit_order" class="submit_order weui_btn weui_btn_primary" style="width: 90%; margin-top: 20px;margin-bottom: 50px;background-color: #e60012;">提交订单</a>
     </div>
     <div id="address_popup" class='weui-popup__container'>
-        <div class="weui-popup__overlay"></div>
+        <!--<div class="weui-popup__overlay"></div>-->
         <div class="weui-popup__modal addresslist" style="background-color: #FFF;">
             <div class="weui_cells_title">请选择送货地址 <a class="fr  close-popup" href="<?php echo site_url('address/show_address');?>" style="color: #e70012;">管理</a> </div>
             <?php foreach($addresslist as $addr) :?>
